# online-study-platform

./: docs.py  pyproject.toml
config/: settings.py  urls.py
course/: admin.py  models.py  paginators.py  permissions.py  serializers.py  services.py  tests.py  urls.py  validators.py  views.py
course/migrations/: 0001_initial.py  0002_lesson.py  0003_alter_course_preview_alter_lesson_preview_and_more.py  0004_lesson_course.py  0005_course_changed_at_course_created_at_and_more.py  0006_alter_course_options_alter_lesson_options_and_more.py  0007_remove_lesson_course_course_lessons.py  0008_course_owner_lesson_owner.py  0009_subscription.py  0010_alter_subscription_options_rename_user_payment_owner_and_more.py  0011_alter_subscription_owner.py
jobs/: deactiavte_users.py  send_course_update.py
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_user_options.py  0003_user_avatar_user_country_user_phone_alter_user_email.py
